--- a/homepage/css/main.css
+++ b/homepage/css/main.css
@@ -1,8 +1,4 @@
 /*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
-.content-wrapper {
-  border: 3px dotted red;
-  width: 90%;
-}
 
 /* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
 /*
@@ -92,9 +88,17 @@ textarea {
    ========================================================================== */
 
 /* ------------------- Base Header - Footer Styles -------------------------- */
+
+.content-wrapper {
+  border: 3px dotted red;
+  width: 90%;
+  margin: 50px 0;
+}
+
 header {
   display: flex;
   justify-content: center;
+  padding: 15px 0;
 }
 
 header .content-wrapper {
@@ -102,11 +106,23 @@ header .content-wrapper {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
+}
+
+.header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
+}
+
+header nav {
+  width: 60%;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
 }
 
 footer {
@@ -114,6 +130,19 @@ footer {
   flex-direction: column;
   align-items: center;
   text-align: center;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .contact {
+  margin-bottom: 50px;
 }
 
 footer .social-icons {
@@ -128,6 +157,12 @@ footer .social-icons p {
   align-items: center;
 }
 
+footer .copyright {
+  margin: 20px 0;
+}
+
+
+/************* Mobile Styles - Homepage **********/
 /* Hero Area */
 
 .hero-area {
@@ -149,6 +184,15 @@ aside {
   justify-content: center;
 }
 
+.features h2 {
+  margin-bottom: 60px;
+}
+
+.features article {
+  width: 63%;
+  margin: 30px 0;
+}
+
 .features .features-items {
   display: flex;
   justify-content: center;
@@ -156,13 +200,29 @@ aside {
   flex-flow: row wrap;
 }
 
-/* About Page */
+.features p {
+  margin: 0;
+}
+
+/* Reviews */
 
 .reviews {
   display: flex;
   justify-content: center;
 }
 
+.reviews h2 {
+
+}
+
+.reviews h3 {
+  width: 55%;
+}
+
+
+
+
+/*************** About Page ***************/
 /*  Mission  */
 
 .mission {
@@ -175,7 +235,11 @@ aside {
   justify-content: center;
 }
 
-/* FAQ Page */
+.contact-content p {
+  margin: 0;
+}
+
+/*************** FAQ Page ****************/
 
 .faq {
   display: flex;
@@ -187,6 +251,15 @@ aside {
   justify-content: center;
   align-items: flex-start;
   flex-flow: row wrap;
+  margin: 50px 0 0 0;
+}
+
+.faq h2 {
+  margin: 40px;
+}
+
+.faq-content {
+  margin-bottom: 50px;
 }
 
 /* ==========================================================================
