--- a/homepage/css/main.css
+++ b/homepage/css/main.css
@@ -477,8 +477,66 @@ aside {
   }
 }
 
-@media only screen and (mi-width: 1200px) {
+@media only screen and (min-width: 1200px) {
   /*Desktop styles here*/
+
+  .content-wrapper {
+    max-width: 960px;
+  }
+
+/* Header */
+
+  header {
+    padding: 15px 0;
+  }
+
+
+  /* Hero Area */
+  .hero-area h1 {
+    width: 80%;
+  }
+
+  /* Aside */
+  aside .content-wrapper {
+    justify-content: space-around;
+  }
+
+  aside .content-wrapper .form-description,
+  aside .content-wrapper .form {
+    width: 30%;
+  }
+
+  /* Features */
+  .features h2 {
+    width: 90%;
+  }
+
+  .features article {
+    flex-basis: 33%;
+  }
+
+  /* Reviews */
+  .reviews article div {
+    width: 42%;
+  }
+
+  /* ========================================================================
+  About Page
+  ========================================================================
+  */
+  .mission h2,
+  .contact-section .content-wrapper h2 {
+    width: 95%;
+  }
+
+  /* ========================================================================
+      FAQ Page
+     ========================================================================
+  */
+  .faq h2 {
+    width: 100%;
+  }    
+
 }
 
 /* ==========================================================================
