--- a/homepage/css/main.css
+++ b/homepage/css/main.css
@@ -87,13 +87,57 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+   /* General Styles */
+
+   html {
+    font-size: 1rem;
+   }
+
+   body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1em;
+    text-align: left;
+   }
+
+   ul,
+   ol {
+    list-style-type: none;
+   }
+
+   a {
+    color: #e2e3ed;
+    text-decoration: none;
+   }
+
+   h2 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.875em;
+   }
+
+   h3,
+   h4 {
+    font-family: 'Poppins', sans-serif;
+    margin: 20px 0;
+    font-weight: 500;
+   }
+
+   p {
+    font-size: .875em;
+    line-height: 1.285;
+   }
+
+   address {
+    font-style: normal;
+   }
+
+   .content-wrapper {
+    border: 3px dotted red;
+    width: 90%;
+    margin: 50px 0;
+  }
+
 /* ------------------- Base Header - Footer Styles -------------------------- */
 
-.content-wrapper {
-  border: 3px dotted red;
-  width: 90%;
-  margin: 50px 0;
-}
 
 header {
   display: flex;
