--- a/homepage/css/main.css
+++ b/homepage/css/main.css
@@ -641,6 +641,10 @@ input[type=button] {
     width: 45%;
   }
 
+  .map figure {
+    padding-bottom: 50%;
+  }
+
   .contact-section .content-wrapper h2 {
     width: 80%;
   }
@@ -754,6 +758,10 @@ input[type=button] {
   .contact-section .content-wrapper h2 {
     width: 95%;
     font-size: 3em;
+  }
+
+  .map figure {
+    padding-bottom: 40%;
   }
 
   .contact-content h4 {
