--- a/homepage/css/main.css
+++ b/homepage/css/main.css
@@ -575,6 +575,11 @@ input[type=button] {
     flex-basis: 50%;
   }
 
+  .features i {
+    font-size: 3.75em;
+    margin-bottom: 40px;
+  }
+
   .features .features-item-description {
     width: 50%;
   }
