--- a/homepage/css/main.css
+++ b/homepage/css/main.css
@@ -144,7 +144,6 @@ address {
 }
 
 .content-wrapper {
-  border: 3px dotted red;
   width: 90%;
   margin: 50px 0;
 }
@@ -229,6 +228,10 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+footer .social-icons p i {
+  font-size: 1.3125em;
 }
 
 footer .copyright {
@@ -631,6 +634,11 @@ input[type=button] {
 
   footer p {
     line-height: 1.285;
+  }
+
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
   }
 
   footer .copyright {
